// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Profile"
        id="user.view.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="user.view.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Profile"
        id="user.view.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="user.view.title"
        values={Object {}}
      />
    }
  />
  <UserProfile
    fetchUser={[Function]}
    history={Object {}}
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    isAdmin={true}
    isCurrentUser={false}
    match={
      Object {
        "params": Object {
          "userId": "1",
        },
      }
    }
    removeUser={[Function]}
    removeUserFromProject={[Function]}
    userData={
      Object {
        "id": "1",
      }
    }
  />
</styled.div>
`;

exports[`View: Component should render without remove user button 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Profile"
        id="user.view.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="user.view.title"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Profile"
        id="user.view.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="user.view.title"
        values={Object {}}
      />
    }
  />
  <UserProfile
    fetchUser={[Function]}
    history={Object {}}
    intl={
      Object {
        "formatMessage": [Function],
      }
    }
    isAdmin={false}
    isCurrentUser={false}
    match={
      Object {
        "params": Object {
          "userId": "1",
        },
      }
    }
    removeUser={[Function]}
    removeUserFromProject={[Function]}
    userData={
      Object {
        "id": "1",
      }
    }
  />
</styled.div>
`;
